test/files/neg/t10729.check
AbstractAnnotation.scala:6: error: class AbstractAnnotation is abstract; cannot be instantiated
  1: @AbstractAnnotation
      ^
ArrayAsAnnotation.scala:2: error: class Array does not extend scala.annotation.Annotation
  1: @Array(10)
      ^
SeqAsAnnotation.scala:2: error: trait Seq is abstract; cannot be instantiated
  1: @Seq(10)
      ^
TraitAnnotation.scala:6: error: trait TraitAnnotation is abstract; cannot be instantiated
  1: @TraitAnnotation
      ^
four errors found
